@@ -1,5 +1,7 @@
 release 1.2 (03-2010)
-- 
+- Fixed issue 467
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=467
+  @Inject can be utilized on provider-based classes.
 
 release 1.1.5 (20-01-2010)
 - Fixed issue 437
